syntax = "proto3";

package vuong.app.v1;
option java_package = "com.vuong.app.v1";
option java_multiple_files = true;
option java_outer_classname = "UserProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "common.proto";
import "operator.proto";

enum GrpcAuthProvider {
    UNSPECIFIED = 0;
    LOCAL = 1;
    FACEBOOK = 2;
    GOOGLE = 3;
    GITHUB = 4;
}

message GrpcCreateUserRequest {
  string name = 1;
  string avatar = 2;
  string email = 4;
  string password = 5;
  GrpcAuthProvider provider = 6;
  string provider_id = 7;
}

message GrpcCreateUserResponse {
  int32 user_id = 1;
}

message GrpcUserUpdateOperation {
  string name = 2;
  string avatar = 3;
  string bio = 4;
  string password = 5;
}

message GrpcUpdateUserRequest {
  int32 user_id = 1;
  GrpcUserUpdateOperation update = 2;
  google.protobuf.FieldMask update_mask = 3;
}

message GrpcUpdateUserResponse {
  int32 user_id = 1;
}

message GrpcUserDto {
  int32 user_id = 1;
  string name = 2;
  string avatar = 3;
  string bio = 4;
  string email = 5;
  string password = 6;
  GrpcAuthProvider provider = 7;
  string provider_id = 8;
  string created_at = 9;
  string updated_at = 10;
}

message GrpcUserFilterParameter {
  vuong.app.v1.operator.StringOperators name = 1;
  vuong.app.v1.operator.StringOperators avatar = 2;
  vuong.app.v1.operator.StringOperators bio = 3;
}

message GrpcUserSortParameter {
  oneof sort {
    vuong.app.v1.operator.SortOrder created_at = 1;
    vuong.app.v1.operator.SortOrder updated_at = 2;
  }
}

message GrpcUserListOptionsRequest {
  int32 current_page = 1;
  int32 page_size = 2;
  GrpcUserSortParameter sort = 3;
  GrpcUserFilterParameter filter = 4;
  google.protobuf.FieldMask field_mask = 5;
}

message GrpcUserPaginatedResponse {
  repeated GrpcUserDto items = 1;
  int32 total_items = 2;
}

message GrpcGetUserByIdRequest {
  int32 user_id = 1;
  google.protobuf.FieldMask field_mask = 2;
}

message GrpcGetUserByIdResponse {
  GrpcUserDto user = 1;
}

message GrpcGetUserByEmailRequest {
  string email = 1;
  google.protobuf.FieldMask field_mask = 2;
}

message GrpcGetUserByEmailResponse {
  GrpcUserDto user = 1;
}

message GrpcExistsByEmailRequest {
  string email = 1;
}

message GrpcExistsByEmailResponse {
  bool exists = 1;
}

service UserService {
  rpc grpcCreate(vuong.app.v1.message.GrpcRequest) returns (vuong.app.v1.message.GrpcResponse);
  rpc grpcUpdate(vuong.app.v1.message.GrpcRequest) returns (vuong.app.v1.message.GrpcResponse);
  rpc grpcFindAll(vuong.app.v1.message.GrpcRequest) returns (vuong.app.v1.message.GrpcResponse);
  rpc grpcFindById(vuong.app.v1.message.GrpcRequest) returns (vuong.app.v1.message.GrpcResponse);
  rpc grpcFindByEmail(vuong.app.v1.message.GrpcRequest) returns (vuong.app.v1.message.GrpcResponse);
  rpc grpcExistsByEmail(vuong.app.v1.message.GrpcRequest) returns (vuong.app.v1.message.GrpcResponse);
}